2015-09-01  Barton E. Schaefer  <schaefer@zsh.org>

	* 36376: Src/utils.c: handle signals during read1char() so it is
	possible to interrupt correct/correctall prompts

2015-09-01  Peter Stephenson  <p.stephenson@samsung.com>

	* 36365: Src/Zle/zle_tricky.c: magic-space removed the reset of
	the line if the lexer found something complicated.

	* unposted: Config/version.mk: update version to 5.1-dev-0 to
	avoid clash with 5.1 release.

2015-09-01  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 36353: Completion/Unix/Command/_git: _git: Unbreak after
	previous.

2015-08-30  Mateusz Karbowy  <mateusz.karbowy@gmail.com>

	* 36328 + 36340: Completion/Unix/Command/_git: _git-cherry-pick:
	Complete other branches only

2015-08-30  Axel Beckert  <abe@deuxchevaux.org>

	* 36338: Functions/Zle/*-magic: s/5.0.9/5.1/ in source comments

2015-08-30  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* unposted: Config/version.mk: Release version 5.1

2015-08-29  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 36321: Completion/Debian/Command/_debcheckout: _debcheckout:
	New completion.

2015-08-28  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 36306: Completion/Unix/Command/_subversion: _subversion:
	Complete --show-item values

2015-08-28  Peter Stephenson  <p.stephenson@samsung.com>

	* users/20475: Doc/Zsh/contrib.yo: mention that cdr mechanism
	keeps unique list with most recent use first.

	* users/20466: Test/V09datetime.ztst: make test for skipping
	strftime extention tests one that is known to fail on
	Solaris.  Reason is not yet known, but there's no current
	evidence for a shell bug so replace the failure by skipping
	test for the release.

2015-08-28  Mikael Magnusson  <mikachu@gmail.com>

	* 36302: Src/Modules/attr.c: Fix compilation with libcap 2.24

	* 36314: Functions/Prompts/prompt_bart_setup: Avoid using
	short_loops syntax in distributed files

2015-08-27  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Completion/Unix/Command/_subversion: _subversion: